--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SOURCE_FILE=./data/raw/input4_goat.rds
 OUTPUT_FILE=./data/output/output.rds
 ERROR_FILE=./data/output/error.log
 APP_ARTIFACTS_DIR =./data/output/
+LOCAL_APP_FILES_DIR=./data/local_app_files
