--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # development settings
 CONFIGURATION_FILE=./app-configuration.json
 PRINT_CONFIGURATION=yes
-SOURCE_FILE=./data/raw/input4_goat.rds
+SOURCE_FILE=./data/raw/input3_stork.rds
 OUTPUT_FILE=./data/output/output.rds
 ERROR_FILE=./data/output/error.log
 APP_ARTIFACTS_DIR =./data/output/
