--- a/appspec.json
+++ b/appspec.json
@@ -27,6 +27,9 @@
         "name": "lubridate"
       },
       {
+        "name": "move"
+      },
+            {
         "name": "move2"
       }
     ]
