--- a/.github/.templatesyncignore
+++ b/.github/.templatesyncignore
@@ -3,6 +3,7 @@ README.md
 renv/
 *.Rproj
 appspec.json
+app-configuration.json
 tests/testthat/test_RFunction.R
 # backward compatibility
 co-pilot-sdk.R
