complete sync ignore rules and fix changelog

--- a/.github/.templatesyncignore
+++ b/.github/.templatesyncignore
@@ -4,6 +4,7 @@ renv/
 *.Rproj
 appspec.json
 app-configuration.json
+data/local_app_files/
 tests/testthat/test_RFunction.R
 # backward compatibility
 co-pilot-sdk.R
