--- a/appspec.json
+++ b/appspec.json
@@ -16,10 +16,10 @@
       "type": "INTEGER"
     },
     {
-      "id": "yourLocalFileSettingId",
+      "id": "yourUserFileSettingId",
       "name": "Personalization",
       "description": "You can personalize the dashboard by providing a file named 'sample.txt'",
-      "type": "LOCAL_FILE"
+      "type": "USER_FILE"
     }
   ],
   "dependencies": {
@@ -34,8 +34,8 @@
   },
   "providedAppFiles": [
     {
-      "settingId": "yourLocalFileSettingId",
-      "from": "data/local_app_files/provided-app-files/yourLocalFileSettingId/"
+      "settingId": "yourUserFileSettingId",
+      "from": "data/local_app_files/provided-app-files/yourUserFileSettingId/"
     }
   ],
   "license": {
