--- a/appspec.json
+++ b/appspec.json
@@ -16,7 +16,7 @@
       "type": "INTEGER"
     },
     {
-      "id": "auxiliary-file_id-a",
+      "id": "auxiliary-file-a",
       "name": "Personalization",
       "description": "You can personalize the dashboard by providing a file named 'sample.txt'",
       "type": "USER_FILE"
@@ -34,8 +34,8 @@
   },
   "providedAppFiles": [
     {
-      "settingId": "auxiliary-file_id-a",
-      "from": "data/local-app-files/provided-app-files/auxiliary-file_id-a/"
+      "settingId": "auxiliary-file-a",
+      "from": "data/auxiliary/user-files/auxiliary-file-a/"
     }
   ],
   "license": {
