--- a/appspec.json
+++ b/appspec.json
@@ -35,7 +35,7 @@
   "providedAppFiles": [
     {
       "settingId": "auxiliary-file-a",
-      "from": "data/auxiliary/user-files/auxiliary-file-a/"
+      "from": "data/auxiliary/user-files/provided-app-file/auxiliary-file-a/sample.txt"
     }
   ],
   "license": {
