--- a/appspec.json
+++ b/appspec.json
@@ -18,7 +18,7 @@
     {
       "id": "auxiliary-file-a",
       "name": "Personalization",
-      "description": "You can personalize the dashboard by providing a file named 'sample.txt'",
+      "description": "You can personalize the dashboard by providing a file",
       "type": "USER_FILE"
     }
   ],
